In card list 1- When card type (ex-VISA,MASTERCARD) text ovelflows , then added css to align it correctly . 2- Fixed alignment of card type (MASTERCARD etc ) with checkmark icon

--- a/src/components/UserCardManagementPanel/UserCardManagementPanel.scss
+++ b/src/components/UserCardManagementPanel/UserCardManagementPanel.scss
@@ -12,8 +12,14 @@
         .card-logo-with-checkicon{
             display: flex;
             justify-content:flex-start;
-            gap: 16px;
+            gap: 0px;
             align-items: center;
+
+            .card-type{
+                width: 60px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
         }
 
         .card-holder-name {
@@ -56,7 +62,10 @@
             }
 
             .card-logo-with-checkicon{
-                gap: 8px;
+                gap: 2px;
+                .card-type{
+                    width: 42px;
+                }
             }
 
             .card-holder-name {
